label align. resolve #24

--- a/src/controls/form.scss
+++ b/src/controls/form.scss
@@ -18,7 +18,6 @@ form {
     label {
         display: flex;
         align-items: center;
-        justify-content: flex-start;
         gap: var(--space-xs);
         margin-top: var(--space-xs);
         color: var(--color-text);
@@ -31,7 +30,9 @@ form {
             margin-bottom: var(--space-xs);
         }
 
+        /* label text */
         &>:first-child {
+            align-self: flex-start;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
@@ -39,10 +40,15 @@ form {
             text-transform: capitalize;
             width: var(--form-label-width);
             min-width: var(--form-label-width);
+            padding: var(--space-xs) 0;
         }
 
-        &>:last-child:not(input[type="checkbox"], input[type="radio"]) {
+        &>:last-child {
             flex-grow: 1;
+        }
+
+        &>:last-child:is(input[type="checkbox"], input[type="radio"]) {
+            flex-grow: 0;
         }
     }
 
